<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_new_dibbit"
        android:icon="@mipmap/ic_menu_add"
        android:title="@string/new_dibbit"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@mipmap/refresh_image"
        android:title="Refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_logout"
        android:title="@string/Logout"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_item_show_subtitle"
        android:title="@string/show_count"
        app:showAsAction="ifRoom"/>


</menu>